[package]
name = "rust-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
ethers = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
rust_decimal = "1.29"
warp = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
